--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.0.1",
+    "@vercel/analytics": "^1.0.1",
     "aos": "^2.3.4",
     "boxicons": "^2.1.4",
     "colorthief": "^2.4.0",
     "emailjs-com": "^3.2.0",
+    "firebase": "^9.23.0",
     "nodemon": "^2.0.22",
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
+    "react-router-dom": "5.3.0",
     "react-icons": "^4.9.0",
     "react-particles-js": "^3.6.0",
     "react-speech": "^1.0.2",
