--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "colorthief": "^2.4.0",
     "emailjs-com": "^3.2.0",
     "firebase": "^9.23.0",
+    "lucide-react": "^0.359.0",
     "nodemon": "^2.0.22",
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
